--- a/templates/admin_template/add_course_template.html
+++ b/templates/admin_template/add_course_template.html
@@ -17,7 +17,7 @@
                     <form method="POST" enctype="multipart/form-data">
                         <div class="card-body">
                             
-                            <div class="form-group">
+                            <div class="col col-md-9 col-12 form-add-course">
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Course ID:  </label>
@@ -29,8 +29,25 @@
                             <div class="col col-md-9 col-12">
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
+                                        <label class="form-label">Course Name:  </label>
+                                        <input type="text" name="course_name" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
                                         <label class="form-label">Instructor:  </label>
-                                        <input type="text" name="instructor" class="form-control">
+                                        <select name="instructor" class="form-select">
+                                            <option value="1">Lee</option>
+                                            <option value="2">Don</option>
+                                            <option value="3">alex</option>
+                                            <option value="4">Peggy</option>
+                                            <option value="5">Betty</option>
+                                            <option value="6">peter</option>
+                                            <option value="7">alicia</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -76,6 +93,94 @@
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Registered No. of Students:  </label>
                                         <input type="text" name="registered_num_of_stud" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Department ID:  </label>
+                                        <select name="department" class="form-select">
+                                            <option selected>Choose the department ID</option>
+                                            <option value="1">1 Computer Science</option>
+                                            <option value="2">2 Informatics</option>
+                                            <option value="3">3 Data Science</option>
+                                            <option value="4">4 Data Analytics</option>
+                                            <option value="5">5 Information System</option>
+                                            <option value="6">6 Quantitative Finance</option>
+                                            <option value="7">7 Softwere Engineering</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Campus ID:  </label>
+                                        <select name="campusid" class="form-select">
+                                            <option selected>Choose the campus ID</option>
+                                            <option value="1">1 Silicon Valley</option>
+                                            <option value="2">2 Seattle</option>
+                                            <option value="3">3 Boston</option>
+                                            <option value="4">4 Charlotte</option>
+                                            <option value="5">5 San Francisco</option>
+                                            <option value="6">6 Portland</option>
+                                            <option value="7">7 Vancouver</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Building ID:  </label>
+                                        <select name="building" class="form-select">
+                                            <option selected>Choose the building ID</option>
+                                            <option value="1">1 Ell Hall</option>
+                                            <option value="2">2 Fenway Center</option>
+                                            <option value="3">3 Forsyth Building</option>
+                                            <option value="4">4 Egan Research Center</option>
+                                            <option value="5">5 Dockser Hall</option>
+                                            <option value="6">6 Cullinane Hall</option>
+                                            <option value="7">7 Cushing Hall</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Room ID:  </labelom>
+                                            <select name="room" class="form-select">
+                                                <option selected>Choose the room ID</option>
+                                                <option value="1">1</option>
+                                                <option value="2">2</option>
+                                                <option value="3">3</option>
+                                                <option value="4">4</option>
+                                                <option value="5">5</option>
+                                                <option value="6">6</option>
+                                                <option value="7">7</option>
+                                            </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col col-md-9 col-12">
+                                <div class="form-row form-add-course">
+                                    <div class="col-3 mb-3">
+                                        <label class="form-label">Date:  </label>
+                                        <select name="date" class="form-select">
+                                            <option selected>Choose the Date</option>
+                                            <option value="1">M</option>
+                                            <option value="2">T</option>
+                                            <option value="3">W</option>
+                                            <option value="4">Th</option>
+                                            <option value="5">F</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
