--- a/templates/admin_template/base.html
+++ b/templates/admin_template/base.html
@@ -8,6 +8,12 @@
             #topBlackBar {
                 border-top: 50px solid #000;
             }
+
+            footer {
+                position: relative;
+                height: 300px;
+                width: 100%;
+            }
         </style>
     </head>
     <body>
@@ -34,21 +40,8 @@
 
     <div class="wrapper">
 
-        <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-            <!-- Left navbar links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-                </li>
-
-            </ul>
-
-
-        </nav>
-        <!-- /.navbar -->
-
-        <!-- Main Sidebar Container -->
+        
+        
           
  
         {% include "admin_template/sidebar.html" with user=user %}
@@ -119,8 +112,32 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <section class="container-fluid">
+    <footer class="footer">
         <div class="row bg-info">
             <div class="offset-4 col-6">
                 <strong class="text-center text-white">
