--- a/templates/admin_template/edit_advisor_template.html
+++ b/templates/admin_template/edit_advisor_template.html
@@ -16,8 +16,8 @@
                     <form method="POST" enctype="multipart/form-data">
                         <div class="card-body">
                             
-                            <div class="col col-md-9 col-12 form-add-course">
-                                <div class="form-row form-add-course">
+                            <div class="col col-md-9 col-12 form-edit-advisor">
+                                <div class="form-row form-edit-advisor">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Employee ID:  </label>
                                         <input type="number" name="employee_id" class="form-control" required>
@@ -25,8 +25,8 @@
                                 </div>
                             </div>
                             
-                            <div class="col col-md-9 col-12 form-add-course">
-                                <div class="form-row form-add-course">
+                            <div class="col col-md-9 col-12 form-edit-advisor">
+                                <div class="form-row form-edit-advisor">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Name:  </label>
                                         <input type="text" name="name" class="form-control" required>
@@ -35,7 +35,7 @@
                             </div>
                 
                             <div class="col col-md-9 col-12">
-                                <div class="form-row form-add-course">
+                                <div class="form-row form-edit-advisor">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Email:  </label>
                                         <input type="text" name="email" class="form-control" required>
@@ -44,7 +44,7 @@
                             </div>
 
                             <div class="col col-md-9 col-12">
-                                <div class="form-row form-add-course">
+                                <div class="form-row form-edit-advisor">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Phone:  </label>
                                         <input type="text" name="phone" class="form-control" required>
@@ -53,10 +53,19 @@
                             </div>
 
                             <div class="col col-md-9 col-12">
-                                <div class="form-row form-add-course">
+                                <div class="form-row form-edit-advisor">
                                     <div class="col-3 mb-3">
-                                        <label class="form-label">Department:  </label>
-                                        <input type="text" name="department" class="form-control" required>
+                                        <label class="form-label">Department ID:  </label>
+                                        <select name="department" class="form-select">
+                                            <option selected>Choose the department ID</option>
+                                            <option value="1">1 Computer Science</option>
+                                            <option value="2">2 Informatics</option>
+                                            <option value="3">3 Data Science</option>
+                                            <option value="4">4 Data Analytics</option>
+                                            <option value="5">5 Information System</option>
+                                            <option value="6">6 Quantitative Finance</option>
+                                            <option value="7">7 Softwere Engineering</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
