--- a/templates/admin_template/manage_course_template.html
+++ b/templates/admin_template/manage_course_template.html
@@ -30,6 +30,7 @@
                                     <th>Building</th>
                                     <th>Room</th>
                                     <th>Date</th>
+                                    <th>Edit</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -49,7 +50,7 @@
                                     <td>{{course.room.room_id}}</td>
                                     <td>{{course.date}}</td>
                                     <td>
-                                        <a href="{% url 'edit_course' course.course_id %}" class="btn btn-primary">Edit</a> -
+                                        <a href="{% url 'edit_course' course.course_id %}" class="btn btn-primary">Edit</a>
                                         <a href="{% url 'delete_course' course.course_id %}" class="btn btn-danger">Delete</a> 
                                     </td>
                                 </tr>
