--- a/templates/admin_template/sidebar.html
+++ b/templates/admin_template/sidebar.html
@@ -1,73 +1,53 @@
 {% load static %}
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <style>
-        span {
-            margin-left: 50px;
-            margin-top: 100px;
-        }
+<style>
+    .navbar-nav {
+        border: 1px solid grey;
+        border-radius: 7px;
+    }
 
-        ul {
-          margin-top: 200px;
-          list-style-type: none;
-          white-space: nowrap;
-          margin: 2px;
-          padding: 0px;
-          overflow: hidden;
-          border: 1px solid #e7e7e7;
-          background-color: #f3f3f3;
-        }
-        
-        li {
-          display: inline-block;
-        }
-        
-        li a {
-          display: block;
-          color: #666;
-          text-align: center;
-          padding: 0px;
-          text-decoration: none;
-        }
-        
-        li a:hover:not(.active) {
-          background-color: #ddd;
-        }
-        
-        li a.active {
-          color: white;
-          background-color: #1F75FE;
-        }
-        </style>
+    .nav-link {
+        color: black;
+    }
 
-    <!-- title -->
-    
+    .navbar-nav .active {
+        background-color: #0275d8;
+        border-radius: 7px;
+        color: white;
+    }
 
 
+</style>
+</head>
+<body>
     <!-- Sidebar -->
-    <div class="container">
-        <!-- Sidebar Menu -->
-        <ul>
+    <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
 
-                <li class="nav-item">
+                <li>
                     {% url 'admin_home' as admin_home %}
                     <a href="{{admin_home}}" class="nav-link {% if admin_home == request.path %} active {% endif %}">
                         <p>
                             Home
                         </p>
-                        
                     </a>
-                </li>
-                <li class="nav-item">
+                    </li>
+<li>              
                     {% url 'add_advisor' as add_advisor %}
                     <a href="{{add_advisor}}" class="nav-link {% if add_advisor == request.path %} active {% endif %}">
-                        
                         <p>
                             Add Advisor
                         </p>
                     </a>
-                </li>
-                <li class="nav-item">
+                </li>  
+                <li>
                     {% url 'manage_advisor' as manage_advisor %}
                     {% url 'edit_advisor' employee_id as edit_advisor %}
                     <a href="{{manage_advisor}}"
@@ -77,7 +57,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
+            <li>
                     {% url 'add_student' as add_student%}
                     <a href="{{add_student}}" class="nav-link  {% if add_student == request.path %} active {% endif %}">
                         
@@ -86,7 +66,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
+            <li>
                     {% url 'manage_student' as manage_student %}
                     {% url 'edit_student' nuid as edit_student %}
 
@@ -98,7 +78,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
+            <li>
                     {% url 'add_course' as add_course %}
                     <a href="{{add_course}}" class="nav-link  {% if add_course == request.path %} active {% endif %}">
                         
@@ -107,22 +87,19 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
+            <li>
                     {% url 'manage_course' as manage_course %}
                     {% url 'edit_course' course_id as edit_course %}
                     <a href="{{manage_course}}"
                         class="nav-link  {% if edit_course == request.path or manage_course == request.path %} active {% endif %}">
-                        
                         <p>
                             Manage Course
                         </p>
                     </a>
                 </li>
-
-            
                 </ul>
-                
-                <!-- /.sidebar-menu -->
+
                 </div>
-                <!-- /.sidebar -->
-                </aside>
+            </nav>
+            </body>
+            </html>       
