Update reg_num_of_students when successfully dropping courses

--- a/templates/student/course_registration.html
+++ b/templates/student/course_registration.html
@@ -56,14 +56,14 @@
                 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
                 {% for c in data.course_list %}
                     <div class="row">
-                        <div class="col-md-1">{{ c.course_num }}</div>
-                        <div class="col-md-4">{{ c.course_name }}</div>
-                        <div class="col-md-1">{{ c.instructor }}</div>
-                        <div class="col-md-1">{{ c.date }}</div>
-                        <div class="col-md-2">{{ c.meeting_time }}</div>
-                        <div class="col-md-1">{{ c.capacity }}</div>
-                        <div class="col-md-1">{{ c.cur_registered }}</div>
-                        <div class="col-md-1">{{ c.semester_hrs }}</div>
+                        <div class="col-md-1"><font size="1">{{ c.course_num }}</font></div>
+                        <div class="col-md-4"><font size="1">{{ c.course_name }}</font></div>
+                        <div class="col-md-1"><font size="1">{{ c.instructor }}</font></div>
+                        <div class="col-md-1"><font size="1">{{ c.date }}</font></div>
+                        <div class="col-md-2"><font size="1">{{ c.meeting_time }}</font></div>
+                        <div class="col-md-1"><font size="1">{{ c.capacity }}</font></div>
+                        <div class="col-md-1"><font size="1">{{ c.cur_registered }}</font></div>
+                        <div class="col-md-1"><font size="1">{{ c.semester_hrs }}</font></div>
                     </div>
                     <hr style="height:2px;border-width:0;color:gray;background-color:gray">
                 {% endfor %}
