--- a/templates/student/drop_course.html
+++ b/templates/student/drop_course.html
@@ -60,7 +60,7 @@
             <form action="" method="POST"> {%  csrf_token %}
                 <h4 class="border border-primary rounded p-2">Drop Course</h4>
                 <input type="text" class="field" placeholder="Couese Number" name="course_number">
-                <button type="submit" class="btn" style="background-color: mediumvioletred">Drop</button>
+                <button type="submit" class="btn btn-danger">Drop</button>
             </form>
         </div>
         </div>
