--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -27,17 +27,17 @@
                 <a href="{% url 'student_home' student.nuid %}"
                    class="list-group-item active">Home</a>
                 <a href="{% url 'student_profile' student.nuid %}"
-                   class="list-group-item active">View Profile</a>
+                   class="list-group-item">View Profile</a>
                 <a href="{% url 'course_registration' student_id=student.nuid %}"
-                   class="list-group-item active">Registration</a>
+                   class="list-group-item">Registration</a>
                 <a href="{% url 'student_notification' student.nuid %}"
-                   class="list-group-item active">View Notifications</a>
+                   class="list-group-item">View Notifications</a>
                 <a href="{% url 'course_drop' student_id=student.nuid %}"
-                   class="list-group-item active">Drop Courses</a>
+                   class="list-group-item">Drop Courses</a>
                 <a href="{% url 'degree_audit' student_id=student.nuid %}"
-                   class="list-group-item active">My Grades</a>
-                <a href="{% url 'student_list' %}"
-                   class="list-group-item active">Logout</a>
+                   class="list-group-item">My Grades</a>
+                <a href="{% url 'home_signin' %}"
+                   class="list-group-item">Logout</a>
             </div>
         </div>
     </div>
